--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/bootstrap-custom.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
+	<link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
 	
 </head>
 
@@ -22,7 +23,7 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mx-auto">
+    <ul class="navbar-nav mr-auto">
 		<!--el mr-auto lo mueve a la derecha, el ml a la izq y mx al cntro-->
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -59,6 +60,18 @@
       </li>
       
     </ul>
+	<ul class="navbar-nav mr-auto nav-social">
+		<!--socialm media icons-->
+		<li class="nav-item">
+			<a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="#"><i class="fab fa-pinterest-p"></i></a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="#"><i class="fab fa-instagram"></i></a>
+		</li>
+	</ul>
 
   </div>
 </nav>
@@ -257,5 +270,15 @@
 	
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-153067130-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-153067130-1');
+</script>
+
 </body>
 </html>
